# netactview

./: Makefile.in  aclocal.m4  config.h  config.h.in~  configure.ac  configure~
data/: Makefile.in  netactview.desktop
po/: .intltool-merge-cache  POTFILES  et.gmo  it.gmo  pt.gmo  pt.po  ro.gmo  ru.gmo
src/: Makefile.am  Makefile.in  main.c  mainwindow.c  netactview  netactview.ui
